parte 5/tmp4/ParAuL.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParAuL.y
-----------------------------------------------------------------------------

state 219 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListPGlobl -> ListPGlobl                   (1)
	%start_pPGlobl -> PGlobl                           (2)
	%start_pBlock -> Block                             (3)
	%start_pListStm -> ListStm                         (4)
	%start_pBasicType -> BasicType                     (5)
	%start_pBoolean -> Boolean                         (6)
	%start_pPtrVoid -> PtrVoid                         (7)
	%start_pCompoundType -> CompoundType               (8)
	%start_pStm -> Stm                                 (9)
	%start_pEBlk -> EBlk                               (10)
	%start_pDecl -> Decl                               (11)
	%start_pVarInit -> VarInit                         (12)
	%start_pArray -> Array                             (13)
	%start_pVType -> VType                             (14)
	%start_pListVType -> ListVType                     (15)
	%start_pListArray -> ListArray                     (16)
	%start_pLocal -> Local                             (17)
	%start_pAss -> Ass                                 (18)
	%start_pFunc -> Func                               (19)
	%start_pFuncWrite -> FuncWrite                     (20)
	%start_pFuncRead -> FuncRead                       (21)
	%start_pWhile -> While                             (22)
	%start_pRepeat -> Repeat                           (23)
	%start_pFor -> For                                 (24)
	%start_pIncrement -> Increment                     (25)
	%start_pIf -> If                                   (26)
	%start_pElse -> Else                               (27)
	%start_pElseIf -> ElseIf                           (28)
	%start_pListElseIf -> ListElseIf                   (29)
	%start_pReturn -> Return                           (30)
	%start_pRValue -> RValue                           (31)
	%start_pBreak -> Break                             (32)
	%start_pListRExp -> ListRExp                       (33)
	%start_pFuncD -> FuncD                             (34)
	%start_pParamF -> ParamF                           (35)
	%start_pListParamF -> ListParamF                   (36)
	%start_pModality -> Modality                       (37)
	%start_pLExp -> LExp                               (38)
	%start_pListDim -> ListDim                         (39)
	%start_pDim -> Dim                                 (40)
	%start_pRExp -> RExp                               (41)
	%start_pRExp2 -> RExp2                             (42)
	%start_pRExp3 -> RExp3                             (43)
	%start_pRExp6 -> RExp6                             (44)
	%start_pRExp7 -> RExp7                             (45)
	%start_pRExp8 -> RExp8                             (46)
	%start_pRExp9 -> RExp9                             (47)
	%start_pRExp10 -> RExp10                           (48)
	%start_pRExp11 -> RExp11                           (49)
	%start_pRExp1 -> RExp1                             (50)
	%start_pRExp4 -> RExp4                             (51)
	%start_pRExp5 -> RExp5                             (52)
	%start_pRExp12 -> RExp12                           (53)
	Integer -> L_integ                                 (54)
	Double -> L_doubl                                  (55)
	String -> L_quoted                                 (56)
	Char -> L_charac                                   (57)
	LIdent -> L_LIdent                                 (58)
	Program -> ListPGlobl                              (59)
	ListPGlobl -> PGlobl                               (60)
	ListPGlobl -> PGlobl ListPGlobl                    (61)
	PGlobl -> Stm                                      (62)
	PGlobl -> FuncD                                    (63)
	Block -> ListStm                                   (64)
	ListStm ->                                         (65)
	ListStm -> ListStm Stm                             (66)
	BasicType -> 'Bool'                                (67)
	BasicType -> 'Char'                                (68)
	BasicType -> 'Float'                               (69)
	BasicType -> 'Int'                                 (70)
	BasicType -> 'String'                              (71)
	BasicType -> 'Void'                                (72)
	Boolean -> 'true'                                  (73)
	Boolean -> 'false'                                 (74)
	PtrVoid -> 'nil'                                   (75)
	CompoundType -> '*' CompoundType                   (76)
	CompoundType -> CompoundType '[' ']'               (77)
	CompoundType -> BasicType                          (78)
	Stm -> Decl ';'                                    (79)
	Stm -> Local ';'                                   (80)
	Stm -> Ass ';'                                     (81)
	Stm -> While                                       (82)
	Stm -> Repeat ';'                                  (83)
	Stm -> For                                         (84)
	Stm -> If                                          (85)
	Stm -> Func ';'                                    (86)
	Stm -> EBlk                                        (87)
	Stm -> Return ';'                                  (88)
	Stm -> Break ';'                                   (89)
	EBlk -> 'do' Block 'end'                           (90)
	Decl -> BasicType LExp VarInit                     (91)
	VarInit ->                                         (92)
	VarInit -> '=' RExp                                (93)
	VarInit -> '=' Array                               (94)
	Array -> '{' ListArray '}'                         (95)
	Array -> '{' ListVType '}'                         (96)
	VType -> Boolean                                   (97)
	VType -> Char                                      (98)
	VType -> Double                                    (99)
	VType -> Integer                                   (100)
	VType -> String                                    (101)
	VType -> PtrVoid                                   (102)
	ListVType -> VType                                 (103)
	ListVType -> VType ',' ListVType                   (104)
	ListArray -> Array                                 (105)
	ListArray -> Array ',' ListArray                   (106)
	Local -> 'local' Decl                              (107)
	Ass -> LExp '=' RExp                               (108)
	Func -> FuncWrite                                  (109)
	Func -> FuncRead                                   (110)
	Func -> LIdent '(' ListRExp ')'                    (111)
	ListRExp ->                                        (112)
	ListRExp -> RExp                                   (113)
	ListRExp -> RExp ',' ListRExp                      (114)
	FuncWrite -> 'writeInt' '(' RExp ')'               (115)
	FuncWrite -> 'writeFloat' '(' RExp ')'             (116)
	FuncWrite -> 'writeChar' '(' RExp ')'              (117)
	FuncWrite -> 'writeString' '(' RExp ')'            (118)
	FuncRead -> 'readInt' '(' ')'                      (119)
	FuncRead -> 'readFloat' '(' ')'                    (120)
	FuncRead -> 'readChar' '(' ')'                     (121)
	FuncRead -> 'readString' '(' ')'                   (122)
	While -> 'while' RExp EBlk                         (123)
	Repeat -> 'repeat' Block 'until' RExp              (124)
	For -> 'for' LIdent '=' RExp ',' RExp Increment EBlk   (125)
	For -> 'for' LIdent 'in' LIdent EBlk               (126)
	Increment ->                                       (127)
	Increment -> ',' RExp                              (128)
	If -> 'if' RExp 'then' Block ListElseIf Else 'end'   (129)
	Else -> 'else' Block                               (130)
	Else ->                                            (131)
	ElseIf -> 'elseif' RExp 'then' Block               (132)
	ListElseIf ->                                      (133)
	ListElseIf -> ListElseIf ElseIf                    (134)
	Return -> 'return' RValue                          (135)
	RValue ->                                          (136)
	RValue -> RExp                                     (137)
	Break -> 'break'                                   (138)
	FuncD -> CompoundType 'function' LIdent '(' ListParamF ')' Block 'end'   (139)
	ParamF -> Modality BasicType LExp                  (140)
	ListParamF ->                                      (141)
	ListParamF -> ParamF                               (142)
	ListParamF -> ParamF ',' ListParamF                (143)
	Modality ->                                        (144)
	Modality -> 'val'                                  (145)
	Modality -> 'ref'                                  (146)
	Modality -> 'const'                                (147)
	Modality -> 'res'                                  (148)
	Modality -> 'valres'                               (149)
	Modality -> 'name'                                 (150)
	LExp -> LIdent                                     (151)
	LExp -> '*' LExp                                   (152)
	LExp -> LIdent ListDim                             (153)
	ListDim -> Dim                                     (154)
	ListDim -> Dim ListDim                             (155)
	Dim -> '[' Integer ']'                             (156)
	RExp -> RExp 'or' RExp1                            (157)
	RExp -> RExp1 'and' RExp2                          (158)
	RExp -> RExp1                                      (159)
	RExp2 -> 'not' RExp3                               (160)
	RExp2 -> RExp3                                     (161)
	RExp3 -> RExp3 '==' RExp5                          (162)
	RExp3 -> RExp3 '~=' RExp5                          (163)
	RExp3 -> RExp3 '<' RExp5                           (164)
	RExp3 -> RExp3 '<=' RExp5                          (165)
	RExp3 -> RExp3 '>' RExp5                           (166)
	RExp3 -> RExp3 '>=' RExp5                          (167)
	RExp3 -> RExp4                                     (168)
	RExp6 -> RExp6 '+' RExp7                           (169)
	RExp6 -> RExp6 '-' RExp7                           (170)
	RExp6 -> RExp7                                     (171)
	RExp7 -> RExp7 '*' RExp8                           (172)
	RExp7 -> RExp7 '/' RExp8                           (173)
	RExp7 -> RExp7 '%' RExp8                           (174)
	RExp7 -> RExp8                                     (175)
	RExp8 -> RExp9 '^' RExp8                           (176)
	RExp8 -> RExp9                                     (177)
	RExp9 -> '-' RExp10                                (178)
	RExp9 -> RExp10                                    (179)
	RExp10 -> Func                                     (180)
	RExp10 -> RExp10 '..' RExp11                       (181)
	RExp10 -> '#' RExp11                               (182)
	RExp10 -> RExp11                                   (183)
	RExp11 -> Integer                                  (184)
	RExp11 -> LExp                                     (185)
	RExp11 -> '&' LExp                                 (186)
	RExp11 -> Double                                   (187)
	RExp11 -> String                                   (188)
	RExp11 -> Char                                     (189)
	RExp11 -> Boolean                                  (190)
	RExp11 -> PtrVoid                                  (191)
	RExp11 -> RExp12                                   (192)
	RExp1 -> RExp2                                     (193)
	RExp4 -> RExp5                                     (194)
	RExp5 -> RExp6                                     (195)
	RExp12 -> '(' RExp ')'                             (196)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#'            { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'..'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'Bool'         { PT _ (TS _ 19) }
	'Char'         { PT _ (TS _ 20) }
	'Float'        { PT _ (TS _ 21) }
	'Int'          { PT _ (TS _ 22) }
	'String'       { PT _ (TS _ 23) }
	'Void'         { PT _ (TS _ 24) }
	'['            { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'^'            { PT _ (TS _ 27) }
	'and'          { PT _ (TS _ 28) }
	'break'        { PT _ (TS _ 29) }
	'const'        { PT _ (TS _ 30) }
	'do'           { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'elseif'       { PT _ (TS _ 33) }
	'end'          { PT _ (TS _ 34) }
	'false'        { PT _ (TS _ 35) }
	'for'          { PT _ (TS _ 36) }
	'function'     { PT _ (TS _ 37) }
	'if'           { PT _ (TS _ 38) }
	'in'           { PT _ (TS _ 39) }
	'local'        { PT _ (TS _ 40) }
	'name'         { PT _ (TS _ 41) }
	'nil'          { PT _ (TS _ 42) }
	'not'          { PT _ (TS _ 43) }
	'or'           { PT _ (TS _ 44) }
	'readChar'     { PT _ (TS _ 45) }
	'readFloat'    { PT _ (TS _ 46) }
	'readInt'      { PT _ (TS _ 47) }
	'readString'   { PT _ (TS _ 48) }
	'ref'          { PT _ (TS _ 49) }
	'repeat'       { PT _ (TS _ 50) }
	'res'          { PT _ (TS _ 51) }
	'return'       { PT _ (TS _ 52) }
	'then'         { PT _ (TS _ 53) }
	'true'         { PT _ (TS _ 54) }
	'until'        { PT _ (TS _ 55) }
	'val'          { PT _ (TS _ 56) }
	'valres'       { PT _ (TS _ 57) }
	'while'        { PT _ (TS _ 58) }
	'writeChar'    { PT _ (TS _ 59) }
	'writeFloat'   { PT _ (TS _ 60) }
	'writeInt'     { PT _ (TS _ 61) }
	'writeString'  { PT _ (TS _ 62) }
	'{'            { PT _ (TS _ 63) }
	'}'            { PT _ (TS _ 64) }
	'~='           { PT _ (TS _ 65) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_charac       { PT _ (TC $$) }
	L_LIdent       { PT _ (T_LIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListPGlobl rule  1
	%start_pPGlobl  rule  2
	%start_pBlock   rule  3
	%start_pListStm rule  4
	%start_pBasicType rule  5
	%start_pBoolean rule  6
	%start_pPtrVoid rule  7
	%start_pCompoundType rule  8
	%start_pStm     rule  9
	%start_pEBlk    rule  10
	%start_pDecl    rule  11
	%start_pVarInit rule  12
	%start_pArray   rule  13
	%start_pVType   rule  14
	%start_pListVType rule  15
	%start_pListArray rule  16
	%start_pLocal   rule  17
	%start_pAss     rule  18
	%start_pFunc    rule  19
	%start_pFuncWrite rule  20
	%start_pFuncRead rule  21
	%start_pWhile   rule  22
	%start_pRepeat  rule  23
	%start_pFor     rule  24
	%start_pIncrement rule  25
	%start_pIf      rule  26
	%start_pElse    rule  27
	%start_pElseIf  rule  28
	%start_pListElseIf rule  29
	%start_pReturn  rule  30
	%start_pRValue  rule  31
	%start_pBreak   rule  32
	%start_pListRExp rule  33
	%start_pFuncD   rule  34
	%start_pParamF  rule  35
	%start_pListParamF rule  36
	%start_pModality rule  37
	%start_pLExp    rule  38
	%start_pListDim rule  39
	%start_pDim     rule  40
	%start_pRExp    rule  41
	%start_pRExp2   rule  42
	%start_pRExp3   rule  43
	%start_pRExp6   rule  44
	%start_pRExp7   rule  45
	%start_pRExp8   rule  46
	%start_pRExp9   rule  47
	%start_pRExp10  rule  48
	%start_pRExp11  rule  49
	%start_pRExp1   rule  50
	%start_pRExp4   rule  51
	%start_pRExp5   rule  52
	%start_pRExp12  rule  53
	Integer         rule  54
	Double          rule  55
	String          rule  56
	Char            rule  57
	LIdent          rule  58
	Program         rule  59
	ListPGlobl      rules 60, 61
	PGlobl          rules 62, 63
	Block           rule  64
	ListStm         rules 65, 66
	BasicType       rules 67, 68, 69, 70, 71, 72
	Boolean         rules 73, 74
	PtrVoid         rule  75
	CompoundType    rules 76, 77, 78
	Stm             rules 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89
	EBlk            rule  90
	Decl            rule  91
	VarInit         rules 92, 93, 94
	Array           rules 95, 96
	VType           rules 97, 98, 99, 100, 101, 102
	ListVType       rules 103, 104
	ListArray       rules 105, 106
	Local           rule  107
	Ass             rule  108
	Func            rules 109, 110, 111
	ListRExp        rules 112, 113, 114
	FuncWrite       rules 115, 116, 117, 118
	FuncRead        rules 119, 120, 121, 122
	While           rule  123
	Repeat          rule  124
	For             rules 125, 126
	Increment       rules 127, 128
	If              rule  129
	Else            rules 130, 131
	ElseIf          rule  132
	ListElseIf      rules 133, 134
	Return          rule  135
	RValue          rules 136, 137
	Break           rule  138
	FuncD           rule  139
	ParamF          rule  140
	ListParamF      rules 141, 142, 143
	Modality        rules 144, 145, 146, 147, 148, 149, 150
	LExp            rules 151, 152, 153
	ListDim         rules 154, 155
	Dim             rule  156
	RExp            rules 157, 158, 159
	RExp2           rules 160, 161
	RExp3           rules 162, 163, 164, 165, 166, 167, 168
	RExp6           rules 169, 170, 171
	RExp7           rules 172, 173, 174, 175
	RExp8           rules 176, 177
	RExp9           rules 178, 179
	RExp10          rules 180, 181, 182, 183
	RExp11          rules 184, 185, 186, 187, 188, 189, 190, 191, 192
	RExp1           rule  193
	RExp4           rule  194
	RExp5           rule  195
	RExp12          rule  196

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'*'            shift, and enter state 213
	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139
	'break'        shift, and enter state 143
	'do'           shift, and enter state 189
	'for'          shift, and enter state 158
	'if'           shift, and enter state 154
	'local'        shift, and enter state 170
	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'repeat'       shift, and enter state 160
	'return'       shift, and enter state 147
	'while'        shift, and enter state 162
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_LIdent       shift, and enter state 95

	LIdent         goto state 62
	Program        goto state 216
	ListPGlobl     goto state 217
	PGlobl         goto state 215
	BasicType      goto state 210
	CompoundType   goto state 131
	Stm            goto state 211
	EBlk           goto state 191
	Decl           goto state 192
	Local          goto state 193
	Ass            goto state 194
	Func           goto state 195
	FuncWrite      goto state 66
	FuncRead       goto state 67
	While          goto state 196
	Repeat         goto state 197
	For            goto state 198
	If             goto state 199
	Return         goto state 200
	Break          goto state 201
	FuncD          goto state 212
	LExp           goto state 168

State 1


	'*'            shift, and enter state 213
	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139
	'break'        shift, and enter state 143
	'do'           shift, and enter state 189
	'for'          shift, and enter state 158
	'if'           shift, and enter state 154
	'local'        shift, and enter state 170
	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'repeat'       shift, and enter state 160
	'return'       shift, and enter state 147
	'while'        shift, and enter state 162
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_LIdent       shift, and enter state 95

	LIdent         goto state 62
	ListPGlobl     goto state 214
	PGlobl         goto state 215
	BasicType      goto state 210
	CompoundType   goto state 131
	Stm            goto state 211
	EBlk           goto state 191
	Decl           goto state 192
	Local          goto state 193
	Ass            goto state 194
	Func           goto state 195
	FuncWrite      goto state 66
	FuncRead       goto state 67
	While          goto state 196
	Repeat         goto state 197
	For            goto state 198
	If             goto state 199
	Return         goto state 200
	Break          goto state 201
	FuncD          goto state 212
	LExp           goto state 168

State 2


	'*'            shift, and enter state 213
	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139
	'break'        shift, and enter state 143
	'do'           shift, and enter state 189
	'for'          shift, and enter state 158
	'if'           shift, and enter state 154
	'local'        shift, and enter state 170
	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'repeat'       shift, and enter state 160
	'return'       shift, and enter state 147
	'while'        shift, and enter state 162
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_LIdent       shift, and enter state 95

	LIdent         goto state 62
	PGlobl         goto state 209
	BasicType      goto state 210
	CompoundType   goto state 131
	Stm            goto state 211
	EBlk           goto state 191
	Decl           goto state 192
	Local          goto state 193
	Ass            goto state 194
	Func           goto state 195
	FuncWrite      goto state 66
	FuncRead       goto state 67
	While          goto state 196
	Repeat         goto state 197
	For            goto state 198
	If             goto state 199
	Return         goto state 200
	Break          goto state 201
	FuncD          goto state 212
	LExp           goto state 168

State 3


	'*'            reduce using rule 65
	'Bool'         reduce using rule 65
	'Char'         reduce using rule 65
	'Float'        reduce using rule 65
	'Int'          reduce using rule 65
	'String'       reduce using rule 65
	'Void'         reduce using rule 65
	'break'        reduce using rule 65
	'do'           reduce using rule 65
	'for'          reduce using rule 65
	'if'           reduce using rule 65
	'local'        reduce using rule 65
	'readChar'     reduce using rule 65
	'readFloat'    reduce using rule 65
	'readInt'      reduce using rule 65
	'readString'   reduce using rule 65
	'repeat'       reduce using rule 65
	'return'       reduce using rule 65
	'while'        reduce using rule 65
	'writeChar'    reduce using rule 65
	'writeFloat'   reduce using rule 65
	'writeInt'     reduce using rule 65
	'writeString'  reduce using rule 65
	L_LIdent       reduce using rule 65
	%eof           reduce using rule 65

	Block          goto state 207
	ListStm        goto state 208

State 4


	'*'            reduce using rule 65
	'Bool'         reduce using rule 65
	'Char'         reduce using rule 65
	'Float'        reduce using rule 65
	'Int'          reduce using rule 65
	'String'       reduce using rule 65
	'Void'         reduce using rule 65
	'break'        reduce using rule 65
	'do'           reduce using rule 65
	'for'          reduce using rule 65
	'if'           reduce using rule 65
	'local'        reduce using rule 65
	'readChar'     reduce using rule 65
	'readFloat'    reduce using rule 65
	'readInt'      reduce using rule 65
	'readString'   reduce using rule 65
	'repeat'       reduce using rule 65
	'return'       reduce using rule 65
	'while'        reduce using rule 65
	'writeChar'    reduce using rule 65
	'writeFloat'   reduce using rule 65
	'writeInt'     reduce using rule 65
	'writeString'  reduce using rule 65
	L_LIdent       reduce using rule 65
	%eof           reduce using rule 65

	ListStm        goto state 206

State 5


	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139

	BasicType      goto state 205

State 6


	'false'        shift, and enter state 81
	'true'         shift, and enter state 87

	Boolean        goto state 204

State 7


	'nil'          shift, and enter state 82

	PtrVoid        goto state 203

State 8


	'*'            shift, and enter state 133
	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139

	BasicType      goto state 130
	CompoundType   goto state 202

State 9


	'*'            shift, and enter state 79
	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139
	'break'        shift, and enter state 143
	'do'           shift, and enter state 189
	'for'          shift, and enter state 158
	'if'           shift, and enter state 154
	'local'        shift, and enter state 170
	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'repeat'       shift, and enter state 160
	'return'       shift, and enter state 147
	'while'        shift, and enter state 162
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_LIdent       shift, and enter state 95

	LIdent         goto state 62
	BasicType      goto state 186
	Stm            goto state 190
	EBlk           goto state 191
	Decl           goto state 192
	Local          goto state 193
	Ass            goto state 194
	Func           goto state 195
	FuncWrite      goto state 66
	FuncRead       goto state 67
	While          goto state 196
	Repeat         goto state 197
	For            goto state 198
	If             goto state 199
	Return         goto state 200
	Break          goto state 201
	LExp           goto state 168

State 10


	'do'           shift, and enter state 189

	EBlk           goto state 188

State 11


	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139

	BasicType      goto state 186
	Decl           goto state 187

State 12


	'='            shift, and enter state 185
	%eof           reduce using rule 92

	VarInit        goto state 184

State 13


	'{'            shift, and enter state 173

	Array          goto state 183

State 14


	'false'        shift, and enter state 81
	'nil'          shift, and enter state 82
	'true'         shift, and enter state 87
	L_integ        shift, and enter state 55
	L_doubl        shift, and enter state 92
	L_quoted       shift, and enter state 93
	L_charac       shift, and enter state 94

	Integer        goto state 174
	Double         goto state 175
	String         goto state 176
	Char           goto state 177
	Boolean        goto state 178
	PtrVoid        goto state 179
	VType          goto state 182

State 15


	'false'        shift, and enter state 81
	'nil'          shift, and enter state 82
	'true'         shift, and enter state 87
	L_integ        shift, and enter state 55
	L_doubl        shift, and enter state 92
	L_quoted       shift, and enter state 93
	L_charac       shift, and enter state 94

	Integer        goto state 174
	Double         goto state 175
	String         goto state 176
	Char           goto state 177
	Boolean        goto state 178
	PtrVoid        goto state 179
	VType          goto state 180
	ListVType      goto state 181

State 16


	'{'            shift, and enter state 173

	Array          goto state 171
	ListArray      goto state 172

State 17


	'local'        shift, and enter state 170

	Local          goto state 169

State 18


	'*'            shift, and enter state 79
	L_LIdent       shift, and enter state 95

	LIdent         goto state 103
	Ass            goto state 167
	LExp           goto state 168

State 19


	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_LIdent       shift, and enter state 95

	LIdent         goto state 165
	Func           goto state 166
	FuncWrite      goto state 66
	FuncRead       goto state 67

State 20


	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91

	FuncWrite      goto state 164

State 21


	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86

	FuncRead       goto state 163

State 22


	'while'        shift, and enter state 162

	While          goto state 161

State 23


	'repeat'       shift, and enter state 160

	Repeat         goto state 159

State 24


	'for'          shift, and enter state 158

	For            goto state 157

State 25


	','            shift, and enter state 156
	%eof           reduce using rule 127

	Increment      goto state 155

State 26


	'if'           shift, and enter state 154

	If             goto state 153

State 27


	'else'         shift, and enter state 152
	%eof           reduce using rule 131

	Else           goto state 151

State 28


	'elseif'       shift, and enter state 150

	ElseIf         goto state 149

State 29


	'elseif'       reduce using rule 133
	%eof           reduce using rule 133

	ListElseIf     goto state 148

State 30


	'return'       shift, and enter state 147

	Return         goto state 146

State 31


	'#'            shift, and enter state 77
	'&'            shift, and enter state 78
	'('            shift, and enter state 57
	'*'            shift, and enter state 79
	'-'            shift, and enter state 80
	'false'        shift, and enter state 81
	'nil'          shift, and enter state 82
	'not'          shift, and enter state 102
	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'true'         shift, and enter state 87
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_integ        shift, and enter state 55
	L_doubl        shift, and enter state 92
	L_quoted       shift, and enter state 93
	L_charac       shift, and enter state 94
	L_LIdent       shift, and enter state 95
	%eof           reduce using rule 136

	Integer        goto state 58
	Double         goto state 59
	String         goto state 60
	Char           goto state 61
	LIdent         goto state 62
	Boolean        goto state 63
	PtrVoid        goto state 64
	Func           goto state 65
	FuncWrite      goto state 66
	FuncRead       goto state 67
	RValue         goto state 144
	LExp           goto state 68
	RExp           goto state 145
	RExp2          goto state 98
	RExp3          goto state 99
	RExp6          goto state 69
	RExp7          goto state 70
	RExp8          goto state 71
	RExp9          goto state 72
	RExp10         goto state 73
	RExp11         goto state 74
	RExp1          goto state 113
	RExp4          goto state 101
	RExp5          goto state 97
	RExp12         goto state 76

State 32


	'break'        shift, and enter state 143

	Break          goto state 142

State 33


	'#'            shift, and enter state 77
	'&'            shift, and enter state 78
	'('            shift, and enter state 57
	'*'            shift, and enter state 79
	'-'            shift, and enter state 80
	'false'        shift, and enter state 81
	'nil'          shift, and enter state 82
	'not'          shift, and enter state 102
	'readChar'     shift, and enter state 83
	'readFloat'    shift, and enter state 84
	'readInt'      shift, and enter state 85
	'readString'   shift, and enter state 86
	'true'         shift, and enter state 87
	'writeChar'    shift, and enter state 88
	'writeFloat'   shift, and enter state 89
	'writeInt'     shift, and enter state 90
	'writeString'  shift, and enter state 91
	L_integ        shift, and enter state 55
	L_doubl        shift, and enter state 92
	L_quoted       shift, and enter state 93
	L_charac       shift, and enter state 94
	L_LIdent       shift, and enter state 95
	%eof           reduce using rule 112

	Integer        goto state 58
	Double         goto state 59
	String         goto state 60
	Char           goto state 61
	LIdent         goto state 62
	Boolean        goto state 63
	PtrVoid        goto state 64
	Func           goto state 65
	ListRExp       goto state 140
	FuncWrite      goto state 66
	FuncRead       goto state 67
	LExp           goto state 68
	RExp           goto state 141
	RExp2          goto state 98
	RExp3          goto state 99
	RExp6          goto state 69
	RExp7          goto state 70
	RExp8          goto state 71
	RExp9          goto state 72
	RExp10         goto state 73
	RExp11         goto state 74
	RExp1          goto state 113
	RExp4          goto state 101
	RExp5          goto state 97
	RExp12         goto state 76

State 34


	'*'            shift, and enter state 133
	'Bool'         shift, and enter state 134
	'Char'         shift, and enter state 135
	'Float'        shift, and enter state 136
	'Int'          shift, and enter state 137
	'String'       shift, and enter state 138
	'Void'         shift, and enter state 139

	BasicType      goto state 130
	CompoundType   goto state 131
	FuncD          goto state 132

State 35


	'Bool'         reduce using rule 144
	'Char'         reduce using rule 144
	'Float'        reduce using rule 144
	'Int'          reduce using rule 144
	'String'       reduce using rule 144
	'Void'         reduce using rule 144
	'const'        shift, and enter state 120
	'name'         shift, and enter state 121
	'ref'          shift, and enter state 122
	'res'          shift, and enter state 123
	'val'          shift, and enter state 124
	'valres'       shift, and enter state 125

	ParamF         goto state 129
	Modality       goto state 128

State 36


	'Bool'         reduce using rule 144
	'Char'         reduce using rule 144
	'Float'        reduce using rule 144
	'Int'          reduce using rule 144
	'String'       reduce using rule 144
	'Void'         reduce using rule 144
	'const'        shift, and enter state 120
	'name'         shift, and enter state 121
	'ref'          shift, and enter state 122
	'res'          shift, and enter state 123
	'val'          shift, and enter state 124
	'valres'       shift, and enter state 125
	%eof           reduce using rule 141

	ParamF         goto state 126
	ListParamF     goto state 127
	Modality       goto state 128

State 37


	'const'        shift, and enter state 120
	'name'         shift, and enter state 121
	'ref'          shift, and enter state 122
	'res'          shift, and enter state 123
	'val'          shift, and enter state 124
	'valres'       shift, and enter state 125
	%eof           reduce using rule 144

	Modality       goto state 119

State 38


	'*'            shift, and enter state 79
	L_LIdent       shift, and enter state 95

	LIdent         goto state 103
	LExp           goto state 118

State 39


	'['            shift, and enter state 115

	ListDim        goto state 116
	Dim            goto state 117

State 40


	'['            shift, and enter state 115

	Dim            goto state 114

State 41

